--- a/directbak.yaml
+++ b/directbak.yaml
@@ -722,6 +722,7 @@ payload:
   - '+.1000tuan.com'
   - '+.1000uc.com'
   - '+.1000xuexi.com'
+  - '+.1000xun.com'
   - '+.1000zhu.com'
   - '+.10010.com'
   - '+.10010400.net'
@@ -1151,7 +1152,6 @@ payload:
   - '+.126ts.com'
   - '+.126x.com'
   - '+.126z.net'
-  - '+.126ziyuan.com'
   - '+.127.net'
   - '+.1278721.com'
   - '+.12799.com'
@@ -2557,6 +2557,7 @@ payload:
   - '+.301tz.cc'
   - '+.301zhuanfa.com'
   - '+.3023.com'
+  - '+.302302.xyz'
   - '+.3033c.com'
   - '+.306t.com'
   - '+.308308.com'
@@ -2671,7 +2672,6 @@ payload:
   - '+.324.com'
   - '+.3259.com'
   - '+.32800.com'
-  - '+.328888.xyz'
   - '+.328f.com'
   - '+.32bh.com'
   - '+.32ka.com'
@@ -3324,7 +3324,6 @@ payload:
   - '+.3renhe.net'
   - '+.3richman.com'
   - '+.3rkr.com'
-  - '+.3rxing.org'
   - '+.3s.work'
   - '+.3s001.com'
   - '+.3s3w.com'
@@ -3399,6 +3398,7 @@ payload:
   - '+.4008005216.com'
   - '+.4008060066.com'
   - '+.4008075595.com'
+  - '+.4008090678.com'
   - '+.4008103103.com'
   - '+.4008107107.com'
   - '+.4008109886.com'
@@ -4189,7 +4189,6 @@ payload:
   - '+.51ttxue.com'
   - '+.51tuiyi.com'
   - '+.51tunhuo.com'
-  - '+.51tuodao.com'
   - '+.51tuz.com'
   - '+.51tv.com'
   - '+.51tv.net'
@@ -4949,7 +4948,6 @@ payload:
   - '+.59w.net'
   - '+.59wj.com'
   - '+.59yx.com'
-  - '+.5a3q.com'
   - '+.5a49.com'
   - '+.5a8.org'
   - '+.5aaa.com'
@@ -5314,6 +5312,7 @@ payload:
   - '+.66378.com'
   - '+.66460.com'
   - '+.6655.la'
+  - '+.6655cy.com'
   - '+.6656pk.com'
   - '+.6660333.com'
   - '+.6665.com'
@@ -8256,6 +8255,7 @@ payload:
   - '+.aleest.com'
   - '+.alenshaw.com'
   - '+.alertover.com'
+  - '+.alexhaohao.com'
   - '+.alexyan.cc'
   - '+.aleyoo.com'
   - '+.alfeng.com'
@@ -8912,6 +8912,7 @@ payload:
   - '+.aoyou.com'
   - '+.aoyou365.com'
   - '+.aoyoux.com'
+  - '+.aoyu100.com'
   - '+.aoyuge.com'
   - '+.aoyunque.com'
   - '+.aozehuanbao.com'
@@ -8942,6 +8943,7 @@ payload:
   - '+.apgblogs.com'
   - '+.apgoview.com'
   - '+.aphidic.com'
+  - '+.api.anythinktech.com'
   - '+.api.bz'
   - '+.apiadmin.org'
   - '+.apiairasia.com'
@@ -9291,6 +9293,7 @@ payload:
   - '+.asoasm.com'
   - '+.asomob.com'
   - '+.asoulfan.com'
+  - '+.asoulwiki.com'
   - '+.asp168.com'
   - '+.asp300.com'
   - '+.asp8php.com'
@@ -10989,7 +10992,6 @@ payload:
   - '+.biquge.la'
   - '+.biquge.lu'
   - '+.biquge.vip'
-  - '+.biquge0.cc'
   - '+.biquge11.com'
   - '+.biquge5200.cc'
   - '+.biquge5200.com'
@@ -11051,7 +11053,6 @@ payload:
   - '+.bishengoffice.com'
   - '+.bisheziliao.com'
   - '+.bishijie.com'
-  - '+.bishoujo.moe'
   - '+.bitauto.com'
   - '+.bitautoimg.com'
   - '+.bitautotech.com'
@@ -12920,7 +12921,6 @@ payload:
   - '+.ccpit-ah.com'
   - '+.ccpit-ep.org'
   - '+.ccpit-henan.org'
-  - '+.ccpit-shaanxi.org'
   - '+.ccpit-sichuan.org'
   - '+.ccpit-sx.org'
   - '+.ccpit-tga.org'
@@ -15498,7 +15498,6 @@ payload:
   - '+.cn168.com'
   - '+.cn18k.com'
   - '+.cn20.com'
-  - '+.cn21edu.com'
   - '+.cn22.net'
   - '+.cn2che.com'
   - '+.cn314.com'
@@ -17354,6 +17353,7 @@ payload:
   - '+.d8th.com'
   - '+.da-qian.com'
   - '+.da-quan.net'
+  - '+.da.anythinktech.com'
   - '+.da88.net'
   - '+.daanbar.com'
   - '+.daba.com'
@@ -17716,7 +17716,6 @@ payload:
   - '+.dashangcloud.com'
   - '+.dashanghaizhuce.com'
   - '+.dashangu.com'
-  - '+.dashedm.com'
   - '+.dashen520.com'
   - '+.dashengji.com'
   - '+.dashenglaile.com'
@@ -17779,6 +17778,7 @@ payload:
   - '+.datesdata.com'
   - '+.datia-inspect.com'
   - '+.datianmen.com'
+  - '+.datk.anythinktech.com'
   - '+.datongtaxi.com'
   - '+.datouwang.com'
   - '+.datuc.com'
@@ -18029,7 +18029,6 @@ payload:
   - '+.dearedu.com'
   - '+.dearisland.com'
   - '+.dearloc.com'
-  - '+.dearprinter.com'
   - '+.deartree.com'
   - '+.deathearth.com'
   - '+.deau-cable.com'
@@ -18304,7 +18303,6 @@ payload:
   - '+.dgjs123.com'
   - '+.dgjxmk.com'
   - '+.dgjyw.com'
-  - '+.dgksxx.com'
   - '+.dglpool.com'
   - '+.dgmama.net'
   - '+.dgmmbb.com'
@@ -19845,7 +19843,6 @@ payload:
   - '+.dydata.io'
   - '+.dydt.net'
   - '+.dydytt.com'
-  - '+.dydytt.net'
   - '+.dyee.org'
   - '+.dyfc.net'
   - '+.dyg-hec.com'
@@ -20495,6 +20492,7 @@ payload:
   - '+.eeybo.com'
   - '+.eeyxs.com'
   - '+.eeyy.com'
+  - '+.eezml.com'
   - '+.ef-cdn.com'
   - '+.ef-school.com'
   - '+.ef360.com'
@@ -20556,6 +20554,7 @@ payload:
   - '+.egret.com'
   - '+.egsea.com'
   - '+.egshuyuan.com'
+  - '+.egt365.com'
   - '+.ehafo.com'
   - '+.ehaier.com'
   - '+.ehaimao.com'
@@ -24619,6 +24618,7 @@ payload:
   - '+.gtm-a4b8.com'
   - '+.gtm-a4b9.com'
   - '+.gtm-a5b4.com'
+  - '+.gtm-i1d1.com'
   - '+.gtm-i1d6.com'
   - '+.gtm-i1d7.com'
   - '+.gtm-i1d9.com'
@@ -24644,7 +24644,6 @@ payload:
   - '+.guaihaha.net'
   - '+.guaihou.com'
   - '+.guaikemov.com'
-  - '+.guaili.org'
   - '+.guailuo.com'
   - '+.guailuzi.com'
   - '+.guaiwola.com'
@@ -26463,7 +26462,6 @@ payload:
   - '+.heiyuewan.com'
   - '+.heiyunxitong.com'
   - '+.heizhushoes.com'
-  - '+.hejiajinrong.com'
   - '+.hejinchuitou.net'
   - '+.hejiu2016.com'
   - '+.hejizhan.com'
@@ -31200,6 +31198,7 @@ payload:
   - '+.jddj.com'
   - '+.jddmoto.com'
   - '+.jdedu.net'
+  - '+.jdemall.com'
   - '+.jdfcloud.com'
   - '+.jdfhq.com'
   - '+.jdfschool.com'
@@ -35044,7 +35043,6 @@ payload:
   - '+.langchengzhixin.com'
   - '+.langfang.com'
   - '+.langfangfc.com'
-  - '+.langfly.com'
   - '+.langke.com'
   - '+.langke.tv'
   - '+.langlang.cc'
@@ -35718,7 +35716,6 @@ payload:
   - '+.lezhuan168.com'
   - '+.lezhuan365.com'
   - '+.lezi.com'
-  - '+.lezyo.com'
   - '+.lf-tools.net'
   - '+.lf127.net'
   - '+.lfan.net'
@@ -37090,6 +37087,7 @@ payload:
   - '+.lubiao.com'
   - '+.lubotv.com'
   - '+.luchinfo2.com'
+  - '+.lucian.run'
   - '+.luciaz.me'
   - '+.luckeeinc.com'
   - '+.luckincoffee.co'
@@ -37300,7 +37298,6 @@ payload:
   - '+.lvshunmuseum.org'
   - '+.lvsongguo.com'
   - '+.lvtao.net'
-  - '+.lvtu-vision.com'
   - '+.lvtu.com'
   - '+.lvtu8.com'
   - '+.lvtudiandian.com'
@@ -37317,7 +37314,6 @@ payload:
   - '+.lvyidoor.com'
   - '+.lvyinglaw.com'
   - '+.lvyou114.com'
-  - '+.lvyou5.net'
   - '+.lvyou521.com'
   - '+.lvyoubei.com'
   - '+.lvyougl.com'
@@ -37942,7 +37938,6 @@ payload:
   - '+.maqingxi.com'
   - '+.maqinnews.com'
   - '+.mararun.com'
-  - '+.marcores.com'
   - '+.marioall.com'
   - '+.marioin.com'
   - '+.markdown.xyz'
@@ -38161,7 +38156,6 @@ payload:
   - '+.mditie.com'
   - '+.mdj2y.com'
   - '+.mdjyadi.com'
-  - '+.mdjyouth.com'
   - '+.mdl.ink'
   - '+.mdmhaiwai.com'
   - '+.mdmmm.com'
@@ -38490,6 +38484,7 @@ payload:
   - '+.menxue.com'
   - '+.menyuannews.com'
   - '+.meovse.com'
+  - '+.meow.plus'
   - '+.meowcat.org'
   - '+.mepai.me'
   - '+.mepcec.com'
@@ -40125,6 +40120,7 @@ payload:
   - '+.myzte.com'
   - '+.mz-oneacg.com'
   - '+.mz-sys.com'
+  - '+.mz6.net'
   - '+.mzbei.com'
   - '+.mzboss.com'
   - '+.mzeyes.com'
@@ -40155,8 +40151,8 @@ payload:
   - '+.n0808.com'
   - '+.n12345.com'
   - '+.n12m.cc'
-  - '+.n12xar123.xyz'
   - '+.n21.cc'
+  - '+.n3293.com'
   - '+.n3ko.co'
   - '+.n3sd.com'
   - '+.n423.com'
@@ -40164,6 +40160,7 @@ payload:
   - '+.n5878.com'
   - '+.n77777777.com'
   - '+.n802.com'
+  - '+.n8389.com'
   - '+.n9cn.net'
   - '+.n9z.net'
   - '+.naadou.com'
@@ -43432,7 +43429,6 @@ payload:
   - '+.puercha.cc'
   - '+.puercn.com'
   - '+.puertea.com'
-  - '+.pufa5.org'
   - '+.puhuacapital.com'
   - '+.puhuahui.com'
   - '+.puiedu.com'
@@ -43989,6 +43985,7 @@ payload:
   - '+.qibo168.com'
   - '+.qibookw.com'
   - '+.qibosoft.com'
+  - '+.qibuge.com'
   - '+.qibuluo.com'
   - '+.qibuzw.com'
   - '+.qicaispace.com'
@@ -44840,6 +44837,7 @@ payload:
   - '+.qubaike.com'
   - '+.qubaishu.com'
   - '+.qubaobei.com'
+  - '+.qubiankeji.com'
   - '+.qucai.com'
   - '+.qucaiad.com'
   - '+.qucaidd.com'
@@ -44866,6 +44864,7 @@ payload:
   - '+.quegoo.com'
   - '+.queji.tw'
   - '+.queniubg.com'
+  - '+.queniufm.com'
   - '+.queqiaoba.com'
   - '+.querylist.cc'
   - '+.queshao.com'
@@ -45080,7 +45079,6 @@ payload:
   - '+.qycn.com'
   - '+.qycn.net'
   - '+.qycn.org'
-  - '+.qydaili.com'
   - '+.qydimg.com'
   - '+.qydmz.com'
   - '+.qydns1.com'
@@ -46220,7 +46218,6 @@ payload:
   - '+.salasolo.com'
   - '+.saleoilpaintings.com'
   - '+.salogs.com'
-  - '+.salomerebecca.com'
   - '+.salonglong.com'
   - '+.salongweb.com'
   - '+.salonwith.com'
@@ -47278,7 +47275,6 @@ payload:
   - '+.sharewithu.com'
   - '+.sharing-water.com'
   - '+.sharkselection.com'
-  - '+.sharonroalind.com'
   - '+.sharpbai.com'
   - '+.sharpmobi.com'
   - '+.shartu.com'
@@ -47545,6 +47541,7 @@ payload:
   - '+.shidiao18.com'
   - '+.shidu.com'
   - '+.shidz.com'
+  - '+.shifangshike.com'
   - '+.shifen.com'
   - '+.shifendaojia.com'
   - '+.shifeng.com'
@@ -47630,7 +47627,6 @@ payload:
   - '+.shiqu.com'
   - '+.shiqumao.com'
   - '+.shiqutech.com'
-  - '+.shirleyruby.com'
   - '+.shishagame.com'
   - '+.shishangfengyun.com'
   - '+.shishike.com'
@@ -51809,7 +51805,6 @@ payload:
   - '+.tjtusuguan.com'
   - '+.tjufbase.com'
   - '+.tjupdi.com'
-  - '+.tjvedu.com'
   - '+.tjwch.com'
   - '+.tjwch.org'
   - '+.tjwenjie.com'
@@ -51834,6 +51829,7 @@ payload:
   - '+.tjzyec.com'
   - '+.tk-rays.com'
   - '+.tk-xiong.com'
+  - '+.tk.anythinktech.com'
   - '+.tk163.com'
   - '+.tkf.ink'
   - '+.tkg5.com'
@@ -52049,6 +52045,7 @@ payload:
   - '+.tongzhuo100.com'
   - '+.tonitech.com'
   - '+.tonnn.com'
+  - '+.tony9410.tk'
   - '+.tonysfarm.com'
   - '+.toobug.net'
   - '+.toocle.com'
@@ -52362,6 +52359,7 @@ payload:
   - '+.troila.com'
   - '+.trojantesting.com'
   - '+.tronixin.com'
+  - '+.tropcdn.com'
   - '+.trpcdn.net'
   - '+.trqjrp.xyz'
   - '+.trsoft.vip'
@@ -52400,7 +52398,6 @@ payload:
   - '+.tryineapp.com'
   - '+.trylist.net'
   - '+.trymoka.com'
-  - '+.trysenz.com'
   - '+.tryurbest.com'
   - '+.tryxue.com'
   - '+.ts-cooling.com'
@@ -52676,6 +52673,7 @@ payload:
   - '+.tuishark.com'
   - '+.tuishiben.com'
   - '+.tuishujun.com'
+  - '+.tuisida.com'
   - '+.tuisnake.com'
   - '+.tuistone.com'
   - '+.tuitiger.com'
@@ -52738,6 +52736,7 @@ payload:
   - '+.tuoluocaijing.com'
   - '+.tuoluozhuan.net'
   - '+.tuoniaox.com'
+  - '+.tuotoo.com'
   - '+.tuotuozu.com'
   - '+.tuoweisi.com'
   - '+.tuoxiaoshebei.com'
@@ -54099,7 +54098,6 @@ payload:
   - '+.vipcn.com'
   - '+.vipcto.com'
   - '+.vipdage.com'
-  - '+.vipdy.cc'
   - '+.vipersaudio.com'
   - '+.vipfengfei.com'
   - '+.vipfengxiao.com'
@@ -54574,6 +54572,7 @@ payload:
   - '+.wakeup.fun'
   - '+.wakingsands.com'
   - '+.wakkaa.com'
+  - '+.wakuai.com'
   - '+.walahe.com'
   - '+.walanwalan.com'
   - '+.walatao.com'
@@ -54803,7 +54802,6 @@ payload:
   - '+.wanli.com'
   - '+.wanlitong.com'
   - '+.wanmei.com'
-  - '+.wanmeila.com'
   - '+.wanmeilink.com'
   - '+.wanmeilr.com'
   - '+.wanmeiyueyu.com'
@@ -55377,7 +55375,6 @@ payload:
   - '+.weiyianws.com'
   - '+.weiyichina.org'
   - '+.weiyiminhenqiang.com'
-  - '+.weiyingbao.com'
   - '+.weiyiqibj.com'
   - '+.weiyituku.com'
   - '+.weiyoou8.com'
@@ -55484,7 +55481,6 @@ payload:
   - '+.wenjuntech.com'
   - '+.wenjx.com'
   - '+.wenku.net'
-  - '+.wenku321.com'
   - '+.wenku365.com'
   - '+.wenku7.com'
   - '+.wenku8.com'
@@ -55925,7 +55921,6 @@ payload:
   - '+.whxy.net'
   - '+.whxyqb.com'
   - '+.whxysz.net'
-  - '+.why123.org'
   - '+.whybh2015.com'
   - '+.whycan.com'
   - '+.whyec.com'
@@ -58575,6 +58570,7 @@ payload:
   - '+.xintiao100.com'
   - '+.xintiao80.com'
   - '+.xintiaoyouxi.com'
+  - '+.xintiku.com'
   - '+.xintongconference.com'
   - '+.xintuofalv.com'
   - '+.xinwangcj.com'
@@ -59110,7 +59106,6 @@ payload:
   - '+.xpaper.com'
   - '+.xpaper.net'
   - '+.xpaper.vip'
-  - '+.xpath.org'
   - '+.xpccdn.com'
   - '+.xpcha.com'
   - '+.xpdf.net'
@@ -60376,7 +60371,6 @@ payload:
   - '+.yg-dk.com'
   - '+.ygc711iq.com'
   - '+.ygct.com'
-  - '+.ygdy8.com'
   - '+.ygdy8.net'
   - '+.yge.me'
   - '+.ygei.com'
@@ -62522,6 +62516,7 @@ payload:
   - '+.yxhjt.com'
   - '+.yxhqj.com'
   - '+.yxi.cc'
+  - '+.yxiannetgz.com'
   - '+.yximgs.com'
   - '+.yxin18.com'
   - '+.yxinbao.com'
@@ -65036,7 +65031,6 @@ payload:
   - '+.zubunet.com'
   - '+.zuche.com'
   - '+.zuchecdn.com'
-  - '+.zuciwang.com'
   - '+.zucp.net'
   - '+.zudeapp.com'
   - '+.zudong.com'
