--- a/directbak.yaml
+++ b/directbak.yaml
@@ -283,7 +283,6 @@ payload:
   - '+.0311wifi.com'
   - '+.0314.online'
   - '+.0316.cc'
-  - '+.031v.com'
   - '+.0328.com'
   - '+.033033.com'
   - '+.0335e.com'
@@ -674,7 +673,6 @@ payload:
   - '+.0rz.in'
   - '+.0s8s.com'
   - '+.0sm.com'
-  - '+.0u0.ltd'
   - '+.0x0.biz'
   - '+.0x0.ooo'
   - '+.0x100.club'
@@ -761,7 +759,6 @@ payload:
   - '+.100exam.com'
   - '+.100fang.com'
   - '+.100font.com'
-  - '+.100ftv.com'
   - '+.100how.com'
   - '+.100ip.net'
   - '+.100jiapu.com'
@@ -1154,7 +1151,6 @@ payload:
   - '+.126z.net'
   - '+.127.net'
   - '+.1278721.com'
-  - '+.12799.com'
   - '+.127tv.com'
   - '+.127xx.com'
   - '+.128456.com'
@@ -1667,7 +1663,6 @@ payload:
   - '+.17yund.com'
   - '+.17yy.com'
   - '+.17zhaogong.com'
-  - '+.17zhidao.com'
   - '+.17zhiliao.com'
   - '+.17zhuangxiu.com'
   - '+.17ziti.com'
@@ -1724,7 +1719,6 @@ payload:
   - '+.189ebuy.com'
   - '+.189jxt.com'
   - '+.189key.com'
-  - '+.189qas.com'
   - '+.189read.com'
   - '+.189read.net'
   - '+.189sec.com'
@@ -2421,7 +2415,6 @@ payload:
   - '+.28kai.cc'
   - '+.28khy.com'
   - '+.28rv.com'
-  - '+.28sn.com'
   - '+.28tui.com'
   - '+.28y.com'
   - '+.28y3.com'
@@ -2522,6 +2515,7 @@ payload:
   - '+.2vc00.com'
   - '+.2w.cm'
   - '+.2weima.com'
+  - '+.2xd.net'
   - '+.2xiazai.com'
   - '+.2y9y.com'
   - '+.2yuanma.com'
@@ -2673,6 +2667,7 @@ payload:
   - '+.3259.com'
   - '+.32800.com'
   - '+.328f.com'
+  - '+.328vip.com'
   - '+.32bh.com'
   - '+.32ka.com'
   - '+.32r.com'
@@ -2748,7 +2743,6 @@ payload:
   - '+.3361.com'
   - '+.3366.com'
   - '+.3366.net'
-  - '+.3366722.com'
   - '+.336688.net'
   - '+.3366img.com'
   - '+.3367.com'
@@ -4281,7 +4275,6 @@ payload:
   - '+.51zd.net'
   - '+.51zhangdan.com'
   - '+.51zhantai.com'
-  - '+.51zhaobizhi.com'
   - '+.51zheduoduo.com'
   - '+.51zhengxin.com'
   - '+.51zhi.com'
@@ -4367,7 +4360,6 @@ payload:
   - '+.52237377.com'
   - '+.522g.com'
   - '+.523333.com'
-  - '+.5234444.com'
   - '+.52372.com'
   - '+.523touzi.com'
   - '+.525.life'
@@ -4442,7 +4434,6 @@ payload:
   - '+.52fuqu.com'
   - '+.52game.org'
   - '+.52gg.com'
-  - '+.52ggd.com'
   - '+.52ghai.com'
   - '+.52gougouwang.com'
   - '+.52grz.com'
@@ -5657,7 +5648,6 @@ payload:
   - '+.72xuan.com'
   - '+.72yun.com'
   - '+.72zx.com'
-  - '+.731yz.com'
   - '+.73232yx.com'
   - '+.732732.com'
   - '+.734969.com'
@@ -7088,7 +7078,6 @@ payload:
   - '+.99inn.cc'
   - '+.99jianzhu.com'
   - '+.99jiaoshi.com'
-  - '+.99k5.com'
   - '+.99kgames.com'
   - '+.99lb.net'
   - '+.99max.me'
@@ -7633,7 +7622,6 @@ payload:
   - '+.adwetec.com'
   - '+.adwintech.com'
   - '+.adwo.com'
-  - '+.adwuhu.com'
   - '+.adx.ms'
   - '+.adx666.com'
   - '+.adxhi.com'
@@ -7804,7 +7792,6 @@ payload:
   - '+.ahrefa.com'
   - '+.ahrunzi.com'
   - '+.ahscl.com'
-  - '+.ahshsz.com'
   - '+.ahshuhua.net'
   - '+.ahsjxjy.com'
   - '+.ahsyj.com'
@@ -8597,7 +8584,6 @@ payload:
   - '+.anchnet.com'
   - '+.ancii.com'
   - '+.ancun.com'
-  - '+.anda1516.com'
   - '+.andaike.com'
   - '+.andan.me'
   - '+.andefz.com'
@@ -8742,7 +8728,6 @@ payload:
   - '+.antbuyhot.com'
   - '+.antcloud-miniprogram.com'
   - '+.antcut.com'
-  - '+.antdtheme.com'
   - '+.antdv.com'
   - '+.antebao.com'
   - '+.antebo.com'
@@ -9393,7 +9378,6 @@ payload:
   - '+.augsky.com'
   - '+.augth.com'
   - '+.augurit.com'
-  - '+.auiou.com'
   - '+.auly.com'
   - '+.aunapi.com'
   - '+.auniontech.com'
@@ -11210,7 +11194,6 @@ payload:
   - '+.bjdachi.com'
   - '+.bjdbrc.com'
   - '+.bjdcfy.com'
-  - '+.bjdfart.com'
   - '+.bjdfxj.com'
   - '+.bjdiaoyu.com'
   - '+.bjdjc.com'
@@ -11436,6 +11419,7 @@ payload:
   - '+.bjzyrxgs.com'
   - '+.bk41.net'
   - '+.bk5u.com'
+  - '+.bkbyxa.com'
   - '+.bkclouds.cc'
   - '+.bkdou.com'
   - '+.bkill.net'
@@ -11922,7 +11906,6 @@ payload:
   - '+.bsidu.com'
   - '+.bsjhhzs.com'
   - '+.bsjquanwu.com'
-  - '+.bsjuhui.com'
   - '+.bskk.com'
   - '+.bskrt.com'
   - '+.bskuav.com'
@@ -12334,7 +12317,6 @@ payload:
   - '+.c21wuhan.com'
   - '+.c2h4.org'
   - '+.c32356.com'
-  - '+.c32869.com'
   - '+.c360dn.com'
   - '+.c366.com'
   - '+.c3acg.com'
@@ -12468,7 +12450,6 @@ payload:
   - '+.caijing365.com'
   - '+.caijingcaipiao22270.com'
   - '+.caijingche.com'
-  - '+.caijingmen.com'
   - '+.caijingmobile.com'
   - '+.caijingwu.com'
   - '+.caijinyuan.com'
@@ -14009,6 +13990,7 @@ payload:
   - '+.china-def.com'
   - '+.china-designer.com'
   - '+.china-drm.net'
+  - '+.china-dt.com'
   - '+.china-ef.com'
   - '+.china-efe.org'
   - '+.china-eia.com'
@@ -16928,7 +16910,6 @@ payload:
   - '+.ctcmo.com'
   - '+.ctcnn.com'
   - '+.ctcnpa.com'
-  - '+.ctcontents.com'
   - '+.ctcwri.org'
   - '+.ctdc-itshare.org'
   - '+.ctdcn.com'
@@ -17295,7 +17276,6 @@ payload:
   - '+.cztv.tv'
   - '+.cztvcloud.com'
   - '+.czur.com'
-  - '+.czvv.com'
   - '+.czvv.net'
   - '+.czwsg5.com'
   - '+.czxixi.com'
@@ -18594,7 +18574,6 @@ payload:
   - '+.diiqu.com'
   - '+.dijiahealth.com'
   - '+.dijingchao.com'
-  - '+.dijinlianmeng.com'
   - '+.dijiuban.com'
   - '+.dijunsm.com'
   - '+.diketattoo.com'
@@ -19540,7 +19519,6 @@ payload:
   - '+.du175.com'
   - '+.du1du.org'
   - '+.du7.com'
-  - '+.du7.org'
   - '+.du8.com'
   - '+.dualaid.com'
   - '+.duan.red'
@@ -20348,6 +20326,7 @@ payload:
   - '+.eddycjy.com'
   - '+.ede35.com'
   - '+.edgesrv.com'
+  - '+.edgesrv.xyz'
   - '+.edhic.com'
   - '+.edianchi.com'
   - '+.edianshang.com'
@@ -20905,7 +20884,6 @@ payload:
   - '+.eplove.com'
   - '+.epmao.com'
   - '+.epoos.com'
-  - '+.epqiming.com'
   - '+.eprezi.com'
   - '+.eps114.com'
   - '+.epschool.net'
@@ -21641,7 +21619,6 @@ payload:
   - '+.fans8.com'
   - '+.fansgu.com'
   - '+.fanshicekong.com'
-  - '+.fanshuapp.com'
   - '+.fanshui.net'
   - '+.fanshuxiaobao.com'
   - '+.fansiji.com'
@@ -21929,6 +21906,7 @@ payload:
   - '+.feinno.com'
   - '+.feiphp.com'
   - '+.feipin.com'
+  - '+.feipinzhan.com'
   - '+.feiq18.com'
   - '+.feirar.com'
   - '+.feiren.com'
@@ -22507,7 +22485,6 @@ payload:
   - '+.fokan88.com'
   - '+.folieyun.com'
   - '+.folluo.me'
-  - '+.foloda.com'
   - '+.folou.com'
   - '+.fomen123.com'
   - '+.foneplatform.com'
@@ -23172,12 +23149,10 @@ payload:
   - '+.game-as.com'
   - '+.game-props.com'
   - '+.game-reign.com'
-  - '+.game-yx.com'
   - '+.game12315.com'
   - '+.game13.com'
   - '+.game141.com'
   - '+.game2.com'
-  - '+.game234.com'
   - '+.game345.com'
   - '+.game3vs7novel.com'
   - '+.game4343.com'
@@ -24070,7 +24045,6 @@ payload:
   - '+.gmonline-all.com'
   - '+.gmpanel.com'
   - '+.gmrmyy.com'
-  - '+.gms-lighting.com'
   - '+.gmsjf.com'
   - '+.gmssl.org'
   - '+.gmt-china.org'
@@ -24229,6 +24203,7 @@ payload:
   - '+.gongju5.com'
   - '+.gongjuji.net'
   - '+.gongjumi.com'
+  - '+.gongkaocn.com'
   - '+.gongkaoleida.com'
   - '+.gongkong.com'
   - '+.gongkong001.com'
@@ -25236,7 +25211,6 @@ payload:
   - '+.gzxftz.com'
   - '+.gzxhdyc.com'
   - '+.gzxict.com'
-  - '+.gzxidu.com'
   - '+.gzxjzc.com'
   - '+.gzxszf.com'
   - '+.gzxulang.com'
@@ -25714,7 +25688,6 @@ payload:
   - '+.haobtc.com'
   - '+.haocai.com'
   - '+.haocai1688.com'
-  - '+.haocai777.com'
   - '+.haochang.tv'
   - '+.haochangyou.com'
   - '+.haocheedai.com'
@@ -26276,7 +26249,6 @@ payload:
   - '+.hd288.com'
   - '+.hd3p.com'
   - '+.hd88599.com'
-  - '+.hd8z2vz7.com'
   - '+.hdavchina.com'
   - '+.hdb.com'
   - '+.hdbaichuan.com'
@@ -26475,7 +26447,6 @@ payload:
   - '+.helight.info'
   - '+.helijia.com'
   - '+.helingqi.com'
-  - '+.helishi.net'
   - '+.helishun.com'
   - '+.heliuyan.com'
   - '+.heliweb.net'
@@ -27191,7 +27162,6 @@ payload:
   - '+.hngyzx.org'
   - '+.hnh.cc'
   - '+.hnhaofang.com'
-  - '+.hnhllv.net'
   - '+.hnhnled.com'
   - '+.hnhxhz.com'
   - '+.hnhxxk.com'
@@ -27692,7 +27662,6 @@ payload:
   - '+.hs.net'
   - '+.hs10000.com'
   - '+.hs13z.net'
-  - '+.hs186.com'
   - '+.hs313.info'
   - '+.hs65.com'
   - '+.hsakyy.com'
@@ -29538,6 +29507,7 @@ payload:
   - '+.igdzc.com'
   - '+.igea-un.org'
   - '+.igeak.com'
+  - '+.igeciku.com'
   - '+.igeekbar.com'
   - '+.igeidao.com'
   - '+.igelou.com'
@@ -29999,6 +29969,7 @@ payload:
   - '+.imtmp.net'
   - '+.imtuan.com'
   - '+.imtvs.cc'
+  - '+.imudgame.com'
   - '+.imuke.com'
   - '+.imuo.com'
   - '+.imushan.com'
@@ -30130,7 +30101,6 @@ payload:
   - '+.inlaylink.com'
   - '+.inlishui.com'
   - '+.inlovektv.com'
-  - '+.inlsd.org'
   - '+.inmeng.net'
   - '+.inmuu.com'
   - '+.inneed.club'
@@ -30914,7 +30884,6 @@ payload:
   - '+.iyb.tm'
   - '+.iycdm.com'
   - '+.iycsky.com'
-  - '+.iycwl.com'
   - '+.iyd.wang'
   - '+.iydsj.com'
   - '+.iydu.net'
@@ -31267,7 +31236,6 @@ payload:
   - '+.jeejen.com'
   - '+.jeekun.com'
   - '+.jeeplus.org'
-  - '+.jeepxie.net'
   - '+.jeesci.com'
   - '+.jeesite.com'
   - '+.jeeyaa.com'
@@ -32599,7 +32567,6 @@ payload:
   - '+.joyohub.com'
   - '+.joyoung.com'
   - '+.joyowo.com'
-  - '+.joyque.com'
   - '+.joyshebao.com'
   - '+.joysight.com'
   - '+.joyslink.com'
@@ -32706,6 +32673,7 @@ payload:
   - '+.js-aerfa.com'
   - '+.js-ceo.com'
   - '+.js-code.com'
+  - '+.js-dys.com'
   - '+.js-screen.com'
   - '+.js-weilong.com'
   - '+.js.design'
@@ -34083,7 +34051,6 @@ payload:
   - '+.kiswo.com'
   - '+.kit-lee.me'
   - '+.kitstown.com'
-  - '+.kiujq.com'
   - '+.kiwa-tech.com'
   - '+.kiwenlau.com'
   - '+.kiwisec.com'
@@ -34399,7 +34366,6 @@ payload:
   - '+.kq520.net'
   - '+.kq81.com'
   - '+.kq88.com'
-  - '+.kqcfcw.com'
   - '+.kqgeo.com'
   - '+.kqidong.com'
   - '+.kqiwen.com'
@@ -34997,7 +34963,6 @@ payload:
   - '+.lamajie.com'
   - '+.lamall.com'
   - '+.lamaqun.com'
-  - '+.lamaying.com'
   - '+.lambda.hk'
   - '+.lamiu.com'
   - '+.lamost.org'
@@ -35616,7 +35581,6 @@ payload:
   - '+.leshuwu.com'
   - '+.leslie-cheung.com'
   - '+.lesofaka.com'
-  - '+.lesoncooking.com'
   - '+.lesports.com'
   - '+.lesscss.net'
   - '+.lessisbetter.site'
@@ -36347,7 +36311,6 @@ payload:
   - '+.liugm.com'
   - '+.liuguofeng.com'
   - '+.liuhaolin.com'
-  - '+.liuhu.net'
   - '+.liujiajia.me'
   - '+.liujiangblog.com'
   - '+.liujiasj.com'
@@ -39719,6 +39682,7 @@ payload:
   - '+.muchlab.com'
   - '+.muchong.com'
   - '+.muchrank.com'
+  - '+.mudgj.com'
   - '+.mudiao360.com'
   - '+.mudongguang.com'
   - '+.mudoudou.net'
@@ -41617,7 +41581,6 @@ payload:
   - '+.onescorpion.com'
   - '+.oneshao.com'
   - '+.onesight.com'
-  - '+.onespace.cc'
   - '+.onethingcloud.com'
   - '+.onethingpcs.com'
   - '+.onetog.com'
@@ -41873,7 +41836,6 @@ payload:
   - '+.oss.so'
   - '+.osschina.com'
   - '+.ossrs.net'
-  - '+.ostools.net'
   - '+.osvlabs.com'
   - '+.oswdj.com'
   - '+.oswhy.com'
@@ -42537,7 +42499,6 @@ payload:
   - '+.perspectivar.com'
   - '+.pesiv.com'
   - '+.pesyun.com'
-  - '+.pet82.com'
   - '+.pet86.com'
   - '+.peter-zhou.com'
   - '+.petersonlian.com'
@@ -43723,12 +43684,12 @@ payload:
   - '+.qdtgood.com'
   - '+.qdthgs.com'
   - '+.qdtongxinedu.net'
-  - '+.qdtvu.com'
   - '+.qdwenxue.com'
   - '+.qdwght.com'
   - '+.qdwsb.com'
   - '+.qdxfgy.com'
   - '+.qdxtcw.com'
+  - '+.qdycdx.com'
   - '+.qdyijiamei.com'
   - '+.qdymjy.com'
   - '+.qdyudie.com'
@@ -43928,7 +43889,6 @@ payload:
   - '+.qianqian.com'
   - '+.qianqiankeji.xyz'
   - '+.qianqiantao.com'
-  - '+.qianqianxs.com'
   - '+.qianqu.cc'
   - '+.qianrenge.cc'
   - '+.qianrihong.net'
@@ -45280,6 +45240,7 @@ payload:
   - '+.rbzygs.com'
   - '+.rc114.com'
   - '+.rc3cr.com'
+  - '+.rc53.com'
   - '+.rccchina.com'
   - '+.rcdang.com'
   - '+.rcdn.fun'
@@ -45458,6 +45419,7 @@ payload:
   - '+.renderbus.com'
   - '+.renderincloud.com'
   - '+.rendna.com'
+  - '+.renegade-project.org'
   - '+.rengwan.com'
   - '+.renhence.com'
   - '+.renji.com'
@@ -46247,7 +46209,6 @@ payload:
   - '+.sandeepin.com'
   - '+.sandianzhong.com'
   - '+.sandingtv.com'
-  - '+.sandrarene.com'
   - '+.sandslee.com'
   - '+.sanduoyun.com'
   - '+.sandworld.net'
@@ -46681,7 +46642,6 @@ payload:
   - '+.sdsszt.com'
   - '+.sdtdata.com'
   - '+.sdtsrf.com'
-  - '+.sdtuomei.com'
   - '+.sdtvjiankang.com'
   - '+.sdtxmq.com'
   - '+.sdtzfmw.com'
@@ -47479,7 +47439,6 @@ payload:
   - '+.sherc.net'
   - '+.sheshui.com'
   - '+.sheui.com'
-  - '+.sheup.net'
   - '+.shevdc.org'
   - '+.shexiannet.com'
   - '+.sheyi8.com'
@@ -47934,7 +47893,6 @@ payload:
   - '+.shuchongread.com'
   - '+.shuchuandata.com'
   - '+.shucong.com'
-  - '+.shudaizi.org'
   - '+.shudan.vip'
   - '+.shudaxia.com'
   - '+.shudc.com'
@@ -48194,7 +48152,6 @@ payload:
   - '+.sichuangwy.org'
   - '+.sicimano.com'
   - '+.sicong.wang'
-  - '+.sidatz.com'
   - '+.sidfate.com'
   - '+.sieredu.com'
   - '+.sifalu.com'
@@ -48223,6 +48180,7 @@ payload:
   - '+.sihaitv.com'
   - '+.sihaiyijia.com'
   - '+.siheal.com'
+  - '+.sihoo.com'
   - '+.sihuanpharm.com'
   - '+.sihuida.net'
   - '+.sihuisoft.com'
@@ -48810,7 +48768,6 @@ payload:
   - '+.smwenxue.com'
   - '+.smxdiy.com'
   - '+.smxgjj.com'
-  - '+.smxgzjy.org'
   - '+.smxs.com'
   - '+.smy01.com'
   - '+.smyfinancial.com'
@@ -49432,7 +49389,6 @@ payload:
   - '+.ssmec.com'
   - '+.ssmeow.com'
   - '+.ssmh72.com'
-  - '+.ssmoit.com'
   - '+.ssnewyork.com'
   - '+.ssnn.net'
   - '+.ssofair.com'
@@ -49545,7 +49501,6 @@ payload:
   - '+.steampp.net'
   - '+.steamproxy.net'
   - '+.steamrepcn.com'
-  - '+.steamvpn.org'
   - '+.steamxdf.com'
   - '+.stec.net'
   - '+.stedu.net'
@@ -50030,7 +49985,6 @@ payload:
   - '+.swgzs.com'
   - '+.swhysc.com'
   - '+.swift51.com'
-  - '+.swifter.tips'
   - '+.swifthumb.com'
   - '+.swiftjava.com'
   - '+.swiftlet.net'
@@ -50384,7 +50338,6 @@ payload:
   - '+.szisland.com'
   - '+.szjcyyy.com'
   - '+.szjhxjt.com'
-  - '+.szjjtg.com'
   - '+.szjlwul.com'
   - '+.szjuquan.com'
   - '+.szjyt66.com'
@@ -51063,7 +51016,6 @@ payload:
   - '+.teamall.cc'
   - '+.teambition.com'
   - '+.teambition.net'
-  - '+.teambuy.cc'
   - '+.teamlogs.com'
   - '+.teamminus.com'
   - '+.teamotto.net'
@@ -51919,6 +51871,7 @@ payload:
   - '+.tobaccobid.com'
   - '+.tobaccochina.com'
   - '+.toberp.com'
+  - '+.tobetopone.com'
   - '+.tobnews.com'
   - '+.tobosu.com'
   - '+.tobosu.net'
@@ -52090,7 +52043,6 @@ payload:
   - '+.topcj.com'
   - '+.topcrab.com'
   - '+.topcsic.com'
-  - '+.topdiaoyu.com'
   - '+.topdodo.com'
   - '+.tope365.com'
   - '+.topeditsci.com'
@@ -52963,7 +52915,6 @@ payload:
   - '+.tychio.net'
   - '+.tychou.com'
   - '+.tycits.com'
-  - '+.tycmbvb.com'
   - '+.tycqxs.com'
   - '+.tycredit.com'
   - '+.tydouke.com'
@@ -54436,6 +54387,7 @@ payload:
   - '+.vvkaoyan.com'
   - '+.vvmeiju.com'
   - '+.vvo2o.com'
+  - '+.vvpgwg.xyz'
   - '+.vvpingtai.com'
   - '+.vvpncdn.com'
   - '+.vvtor.com'
@@ -56076,6 +56028,7 @@ payload:
   - '+.winds2021.com'
   - '+.windsns.com'
   - '+.windtch.com'
+  - '+.windtourgame.com'
   - '+.windworkshop.net'
   - '+.wine-world.com'
   - '+.wine9.com'
@@ -56195,6 +56148,7 @@ payload:
   - '+.wjdiy.com'
   - '+.wjdiy.net'
   - '+.wjgslb.com'
+  - '+.wjhh666.com'
   - '+.wjhouses.com'
   - '+.wjhtxx.com'
   - '+.wjiaxing.com'
@@ -56479,7 +56433,6 @@ payload:
   - '+.woo.im'
   - '+.wooaii.com'
   - '+.woocg.com'
-  - '+.wooclouds.com'
   - '+.wood168.net'
   - '+.woodbunny.com'
   - '+.wooddb.com'
@@ -56992,7 +56945,6 @@ payload:
   - '+.wwfchina.org'
   - '+.wwggw.com'
   - '+.wwjia.com'
-  - '+.wwleww.com'
   - '+.wwmhdq.com'
   - '+.wws23.com'
   - '+.wwstat.com'
@@ -57456,6 +57408,7 @@ payload:
   - '+.xcxd-inc.com'
   - '+.xcxs222.com'
   - '+.xcxs520.com'
+  - '+.xcxvs.com'
   - '+.xcxwo.com'
   - '+.xcxx28.com'
   - '+.xcxzl.com'
@@ -58106,7 +58059,6 @@ payload:
   - '+.xiaoxiaotong.org'
   - '+.xiaoxiaozi.com'
   - '+.xiaoxichangliu.com'
-  - '+.xiaoxicloud.com'
   - '+.xiaoxineye.com'
   - '+.xiaoxinrili.com'
   - '+.xiaoxintoutiao.com'
@@ -59093,7 +59045,6 @@ payload:
   - '+.xoyobox.com'
   - '+.xoyocdn.com'
   - '+.xoyq.net'
-  - '+.xp002.com'
   - '+.xp5.com'
   - '+.xp6000.com'
   - '+.xp666.com'
@@ -59158,7 +59109,6 @@ payload:
   - '+.xs1h.com'
   - '+.xs222.tw'
   - '+.xs2500.com'
-  - '+.xs321.com'
   - '+.xs3cnc.com'
   - '+.xs52.com'
   - '+.xs7.cc'
@@ -60987,7 +60937,6 @@ payload:
   - '+.yiyuetop.com'
   - '+.yiyult.com'
   - '+.yiyum.com'
-  - '+.yiyunweb.com'
   - '+.yiyurumen.com'
   - '+.yizaoyiwan.com'
   - '+.yizeijun.com'
@@ -61449,7 +61398,6 @@ payload:
   - '+.youkua.net'
   - '+.youkudou.com'
   - '+.youkudown.com'
-  - '+.youlady.cc'
   - '+.youlanw.com'
   - '+.youle55.com'
   - '+.youleliwu.com'
@@ -62281,7 +62229,6 @@ payload:
   - '+.yunque365.com'
   - '+.yunrg.com'
   - '+.yunrongu.com'
-  - '+.yunrouter.com'
   - '+.yunruift.com'
   - '+.yuns1.net'
   - '+.yunsd.net'
@@ -62753,7 +62700,6 @@ payload:
   - '+.zaitianyan.com'
   - '+.zaitong.net'
   - '+.zaitongxiang.com'
-  - '+.zaitouwang.com'
   - '+.zaiwai.com'
   - '+.zaixian-fanyi.com'
   - '+.zaixianfanyi.com'
@@ -62888,7 +62834,6 @@ payload:
   - '+.zcfuhua.com'
   - '+.zcfy.cc'
   - '+.zcgsfy.com'
-  - '+.zciii.com'
   - '+.zcimg.com'
   - '+.zcitidc.com'
   - '+.zciv.com'
@@ -63465,6 +63410,7 @@ payload:
   - '+.zhejiangmuseum.com'
   - '+.zhejiangqinghe.com'
   - '+.zhejie.com'
+  - '+.zhejing.tech'
   - '+.zhekouo.com'
   - '+.zhelaoda.com'
   - '+.zheli.com'
@@ -63724,7 +63670,6 @@ payload:
   - '+.zhishi.life'
   - '+.zhishichong.com'
   - '+.zhishifenzi.com'
-  - '+.zhishihao.com'
   - '+.zhishilin.com'
   - '+.zhishiniu.com'
   - '+.zhishisoft.com'
@@ -64242,7 +64187,6 @@ payload:
   - '+.zigeer.com'
   - '+.zigqnx.com'
   - '+.ziguhonglan.com'
-  - '+.zihai029.com'
   - '+.zihai0351.com'
   - '+.zihai0535.com'
   - '+.zihai0591.com'
@@ -64805,7 +64749,6 @@ payload:
   - '+.zoroli.com'
   - '+.zorrospray.com'
   - '+.zou.la'
-  - '+.zou114.com'
   - '+.zoubiao.com'
   - '+.zoucheng.cc'
   - '+.zoucz.com'
