--- a/directbak.yaml
+++ b/directbak.yaml
@@ -14773,6 +14773,7 @@ payload:
   - '+.chongwuxiang.com'
   - '+.chongya.com'
   - '+.chongyacdn.com'
+  - '+.chongyejia.com'
   - '+.chongyitang.org'
   - '+.chongzhi.com'
   - '+.chonka.com'
@@ -30898,6 +30899,7 @@ payload:
   - '+.iyiyun.com'
   - '+.iyocloud.com'
   - '+.iyong.com'
+  - '+.iyongpdf.com'
   - '+.iyooread.com'
   - '+.iyoowi.com'
   - '+.iyoucai.com'
@@ -36909,6 +36911,7 @@ payload:
   - '+.lpetl.com'
   - '+.lpllol.com'
   - '+.lply.net'
+  - '+.lppoll.com'
   - '+.lppz.com'
   - '+.lpq1688.com'
   - '+.lprcx.com'
@@ -40119,6 +40122,7 @@ payload:
   - '+.n3293.com'
   - '+.n3ko.co'
   - '+.n3sd.com'
+  - '+.n4115.com'
   - '+.n423.com'
   - '+.n459.com'
   - '+.n5878.com'
@@ -44392,7 +44396,6 @@ payload:
   - '+.qjrc.com'
   - '+.qjren.com'
   - '+.qjsb88.com'
-  - '+.qjshe.com'
   - '+.qjsmartech.com'
   - '+.qjtrip.com'
   - '+.qjwhzs.com'
