--- a/directbak.yaml
+++ b/directbak.yaml
@@ -10055,6 +10055,7 @@ payload:
   - '+.baogao.com'
   - '+.baogao.store'
   - '+.baogaoting.com'
+  - '+.baogaozhiku.com'
   - '+.baoge.net'
   - '+.baoguangsi.org'
   - '+.baoguangtai.com'
@@ -10102,7 +10103,6 @@ payload:
   - '+.baoxian.com'
   - '+.baoxianhai.com'
   - '+.baoxianshichang.com'
-  - '+.baoxianzx.com'
   - '+.baoxiaobar.com'
   - '+.baoxiaohe.com'
   - '+.baoxinleasing.com'
@@ -10889,6 +10889,7 @@ payload:
   - '+.biliyu.com'
   - '+.bill-jc.com'
   - '+.billchn.com'
+  - '+.billionbottle.com'
   - '+.billionconnect.com'
   - '+.billionseo.com'
   - '+.billowlink.com'
@@ -13137,6 +13138,7 @@ payload:
   - '+.cdnhwc1.com'
   - '+.cdnhwc2.com'
   - '+.cdnhwc3.com'
+  - '+.cdnhwc5.com'
   - '+.cdnhwc6.com'
   - '+.cdnhwchcg02.com'
   - '+.cdnhwcibv122.com'
@@ -14574,6 +14576,7 @@ payload:
   - '+.chinauos.com'
   - '+.chinauos.net'
   - '+.chinauos.org'
+  - '+.chinaupa.com'
   - '+.chinaups.com'
   - '+.chinaus-maker.org'
   - '+.chinaus.com'
@@ -15763,6 +15766,7 @@ payload:
   - '+.cnjob.com'
   - '+.cnjoel.com'
   - '+.cnjournals.com'
+  - '+.cnjournals.net'
   - '+.cnjournals.org'
   - '+.cnjpetr.org'
   - '+.cnjunzilan.com'
@@ -17289,6 +17293,7 @@ payload:
   - '+.d-controls.com'
   - '+.d-ctrip.com'
   - '+.d-heaven.com'
+  - '+.d-long.com'
   - '+.d.cg'
   - '+.d03jd.com'
   - '+.d1222.com'
@@ -18030,6 +18035,7 @@ payload:
   - '+.decorcn.com'
   - '+.decwhy.com'
   - '+.dede168.com'
+  - '+.dedeapps.com'
   - '+.dedecms.com'
   - '+.dedecms51.com'
   - '+.dedecmsplus.com'
@@ -18071,6 +18077,7 @@ payload:
   - '+.deerma.com'
   - '+.defcoding.com'
   - '+.defectink.com'
+  - '+.dehe99.com'
   - '+.deheheng.com'
   - '+.deheng.com'
   - '+.dehsm.com'
@@ -21497,6 +21504,7 @@ payload:
   - '+.fandengds.com'
   - '+.fandian.com'
   - '+.fandongxi.com'
+  - '+.fanerkongjian.com'
   - '+.fanfannet.com'
   - '+.fanfou.com'
   - '+.fang-zhou.com'
@@ -26294,6 +26302,7 @@ payload:
   - '+.hdurl.me'
   - '+.hduzplus.xyz'
   - '+.hdwbsaas.com'
+  - '+.hdwebpyqe.com'
   - '+.hdyouxi.com'
   - '+.hdypw.com'
   - '+.hdyunxin.com'
@@ -27622,6 +27631,7 @@ payload:
   - '+.hrbciming.com'
   - '+.hrbeduy.com'
   - '+.hrbesd.com'
+  - '+.hrbjianchewang.com'
   - '+.hrbmama.com'
   - '+.hrbmilan.com'
   - '+.hrbrc.com'
@@ -29063,6 +29073,7 @@ payload:
   - '+.icax.org'
   - '+.icbc-ltd.com'
   - '+.icbc.jp'
+  - '+.icbcasia.com'
   - '+.icbuy.com'
   - '+.icc.link'
   - '+.icc.one'
@@ -33867,6 +33878,7 @@ payload:
   - '+.kesense.com'
   - '+.keshizhongguo.com'
   - '+.kesion.com'
+  - '+.kesiyunlai.com'
   - '+.keslb.com'
   - '+.kesucorp.com'
   - '+.kesum.com'
@@ -36439,6 +36451,7 @@ payload:
   - '+.liyaochao.com'
   - '+.liyingfei.com'
   - '+.liyongseo.com'
+  - '+.liyp.cc'
   - '+.liyu8.com'
   - '+.liyuanheng.com'
   - '+.liyuanhospital.com'
@@ -39682,6 +39695,7 @@ payload:
   - '+.mucf.cc'
   - '+.mucfc.com'
   - '+.muchangqing.com'
+  - '+.muchcloud.com'
   - '+.muchlab.com'
   - '+.muchong.com'
   - '+.muchrank.com'
@@ -40353,6 +40367,7 @@ payload:
   - '+.nd090.com'
   - '+.nd15.com'
   - '+.nd56.com'
+  - '+.ndcpp.com'
   - '+.nddaily.com'
   - '+.nddnrm.com'
   - '+.ndfsl.com'
@@ -40821,7 +40836,6 @@ payload:
   - '+.njdapaidang.com'
   - '+.njdewo.com'
   - '+.njdfwb.com'
-  - '+.njeere.com'
   - '+.njgb.com'
   - '+.njgep.com'
   - '+.njgjj.com'
@@ -41139,6 +41153,7 @@ payload:
   - '+.ntwikis.com'
   - '+.ntwzy.com'
   - '+.ntxiru.com'
+  - '+.ntyy888.com'
   - '+.ntzrj.com'
   - '+.nu1l.com'
   - '+.nuan.io'
@@ -43992,6 +44007,7 @@ payload:
   - '+.qidongyx.com'
   - '+.qidou.com'
   - '+.qiduowei.com'
+  - '+.qie.tv'
   - '+.qiecdn.com'
   - '+.qieerxi.com'
   - '+.qieman.com'
@@ -45221,6 +45237,7 @@ payload:
   - '+.raygame3.com'
   - '+.raygame4.com'
   - '+.rayjoy.com'
+  - '+.rayli.com'
   - '+.raymx-micro.com'
   - '+.rayoptek.com'
   - '+.rayps.com'
@@ -46552,7 +46569,6 @@ payload:
   - '+.sdchn.com'
   - '+.sdcqjy.com'
   - '+.sdcyun.com'
-  - '+.sdd17.com'
   - '+.sddagongrubber.com'
   - '+.sddcp.com'
   - '+.sddermyy.com'
@@ -46640,7 +46656,6 @@ payload:
   - '+.sdrcu.com'
   - '+.sdsgwy.com'
   - '+.sdshshb.com'
-  - '+.sdshyl.com'
   - '+.sdsmefina.com'
   - '+.sdsszt.com'
   - '+.sdtdata.com'
@@ -48083,7 +48098,6 @@ payload:
   - '+.shws.org'
   - '+.shwsg.net'
   - '+.shwyky.net'
-  - '+.shxb.net'
   - '+.shxbe.com'
   - '+.shxhgzf.com'
   - '+.shxiaoran.com'
@@ -49184,6 +49198,7 @@ payload:
   - '+.sowang.com'
   - '+.sowangpan.com'
   - '+.soweather.com'
+  - '+.sowellwell.com'
   - '+.sowin.com'
   - '+.sowu.com'
   - '+.soxsok.com'
@@ -51404,6 +51419,7 @@ payload:
   - '+.tiandizw.com'
   - '+.tianduntech.com'
   - '+.tiandy.com'
+  - '+.tianehui.net'
   - '+.tianelian.com'
   - '+.tianfeiyu.com'
   - '+.tianfuhui.xin'
@@ -54306,7 +54322,6 @@ payload:
   - '+.vrmvip.com'
   - '+.vrpowder.com'
   - '+.vrsat.com'
-  - '+.vrshendeng.com'
   - '+.vrvlink.com'
   - '+.vrvmanager.com'
   - '+.vrwuhan.com'
@@ -55332,7 +55347,6 @@ payload:
   - '+.weiyiminhenqiang.com'
   - '+.weiyiqibj.com'
   - '+.weiyituku.com'
-  - '+.weiyoou8.com'
   - '+.weiyoubot.com'
   - '+.weiyours.com'
   - '+.weiyui.com'
@@ -56401,6 +56415,7 @@ payload:
   - '+.womenjie.com'
   - '+.wonder.wiki'
   - '+.wondercv.com'
+  - '+.wonderful-app.com'
   - '+.wonderful-pr.com'
   - '+.wonderfulsz.com'
   - '+.wonderjk.com'
@@ -56979,7 +56994,6 @@ payload:
   - '+.www.redhat.com'
   - '+.www.samsung.com'
   - '+.www.st.com'
-  - '+.www.sulwhasoo.com'
   - '+.www.thinkpad.com'
   - '+.www.tzoo-img.com'
   - '+.www.vive.com'
@@ -57886,6 +57900,7 @@ payload:
   - '+.xiaohuochai.cc'
   - '+.xiaohuochai.site'
   - '+.xiaohuwl.com'
+  - '+.xiaoice.com'
   - '+.xiaoj.com'
   - '+.xiaoji.com'
   - '+.xiaoji001.com'
@@ -58668,6 +58683,7 @@ payload:
   - '+.xiunian.wang'
   - '+.xiuno.com'
   - '+.xiupin.com'
+  - '+.xiuren.com'
   - '+.xiurenb.com'
   - '+.xiurenji.net'
   - '+.xiushao.com'
@@ -61749,7 +61765,6 @@ payload:
   - '+.ysoow.com'
   - '+.ysplay.com'
   - '+.ysrh.com'
-  - '+.ysshipu.com'
   - '+.yssm.org'
   - '+.yssm.tv'
   - '+.yssp88.com'
@@ -62325,7 +62340,6 @@ payload:
   - '+.yuquanhosp.com'
   - '+.yuque.com'
   - '+.yureen.com'
-  - '+.yurenty.com'
   - '+.yuriimg.com'
   - '+.yusa.me'
   - '+.yushengny.com'
@@ -65249,7 +65263,6 @@ payload:
   - '+.zyea.com'
   - '+.zyecp.com'
   - '+.zyexhibition.com'
-  - '+.zyeye.net'
   - '+.zyfchina.com'
   - '+.zyfj.com'
   - '+.zygames.com'
